name:                llreve-backend
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/cocreature/llreve-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          value
copyright:           (C) 2016 Moritz Kiefer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
tested-with:         GHC == 8.0.1

executable llreve-backend
  hs-source-dirs:      src
  other-modules:       Control.Concurrent.Sem
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 0.11 && < 0.12
                     , warp >= 3.2 && < 3.3
                     , stm >= 2.4 && < 2.5
                     , text >= 1.2 && < 1.3
                     , temporary >= 1.2 && < 1.3
                     , wai-extra >= 3.0 && < 3.1
                     , servant-server >= 0.8 && < 0.10
                     , monad-control >= 1.0 && < 1.1
                     , mtl >= 2.1 && < 2.3
                     , process-extras >= 0.4 && < 0.8
                     , monad-logger >= 0.3 && < 0.4
                     , regex-applicative-text >= 0.1 && < 0.2
