name:                llreve-backend
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/cocreature/llreve-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          value
copyright:           (C) 2016 Moritz Kiefer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
tested-with:         GHC == 8.0.1

executable llreve-backend
  hs-source-dirs:      src
  other-modules:       Control.Concurrent.Sem
                       Llreve.Solver
                       Llreve.Type
                       Llreve.Util
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 0.11 && < 0.12
                     , bytestring >= 0.10 && < 0.11
                     , horname >= 0.1 && < 0.2
                     , logging-effect >= 1.1 && < 1.2
                     , monad-control >= 1.0 && < 1.1
                     , mtl >= 2.1 && < 2.3
                     , process >= 1.4.3 && < 1.5
                     , regex-applicative-text >= 0.1 && < 0.2
                     , servant-server >= 0.8 && < 0.10
                     , stm >= 2.4 && < 2.5
                     , temporary >= 1.2 && < 1.3
                     , text >= 1.2 && < 1.3
                     , wai-cors >= 0.2 && < 0.3
                     , wai-extra >= 3.0 && < 3.1
                     , warp >= 3.2 && < 3.3
  ghc-options:         -Wall